--- a/screen.css
+++ b/screen.css
@@ -57,7 +57,7 @@ body  {
   max-width: 960px;
 }
 h1  {
-  margin: auto 0;
+  margin: 0 auto;
   text-align: center;
   font-size: 140%;
   font-family: 'Press Start 2P', cursive;
